--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/csauques/PrisonNantes#readme",
   "dependencies": {
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "node-fetch": "^2.6.1",
+    "whatwg-fetch": "^3.5.0"
   }
 }
